<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ReportActivity"
    tools:showIn="@layout/activity_report">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:layoutDirection="rtl"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutDirection="rtl"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layoutDirection="rtl"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_report_entered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/shabnam_bold"
                    android:gravity="center"
                    android:layoutDirection="rtl"
                    android:text="۷۵"
                    android:textAlignment="gravity"
                    android:textColor="@color/colorAccentBlue"
                    android:textDirection="rtl"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/shabnam_regular"
                    android:gravity="center"
                    android:layoutDirection="rtl"
                    android:text="@string/string_report_tv_entered"
                    android:textAlignment="gravity"
                    android:textColor="@color/colorMediumGray"
                    android:textDirection="rtl"
                    android:textSize="20sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layoutDirection="rtl"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_report_exited"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/shabnam_bold"
                    android:gravity="center"
                    android:layoutDirection="rtl"
                    android:text="۲۵"
                    android:textAlignment="gravity"
                    android:textColor="@color/colorAccentBlue"
                    android:textDirection="rtl"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/shabnam_regular"
                    android:gravity="center"
                    android:layoutDirection="rtl"
                    android:text="@string/string_report_tv_exited"
                    android:textAlignment="gravity"
                    android:textColor="@color/colorMediumGray"
                    android:textDirection="rtl"
                    android:textSize="20sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layoutDirection="rtl"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_report_income"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/shabnam_bold"
                        android:gravity="center"
                        android:layoutDirection="rtl"
                        android:text="۲۵۰۰۰۰۰"
                        android:textAlignment="gravity"
                        android:textColor="@color/colorAccentBlue"
                        android:textDirection="rtl"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/shabnam_bold"
                        android:gravity="center"
                        android:layoutDirection="rtl"
                        android:text="@string/string_report_tv_income_rial"
                        android:textAlignment="gravity"
                        android:textColor="@color/colorAccentBlue"
                        android:textDirection="rtl"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/shabnam_regular"
                    android:gravity="center"
                    android:layoutDirection="rtl"
                    android:text="@string/string_report_tv_income"
                    android:textAlignment="gravity"
                    android:textColor="@color/colorMediumGray"
                    android:textDirection="rtl"
                    android:textSize="20sp"
                    android:textStyle="normal" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>